fixed many things